FIX: Fix padding too small for quote on home page

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -81,6 +81,11 @@
       }
     }
   }
+
+  &__quote {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 @include media-query($on-laptop) {
